--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,9 +277,13 @@ find_package(PhysFS REQUIRED)
 find_package(RapidJson REQUIRED)
 INCLUDE_DIRECTORIES(${RAPID_JSON_INCLUDE_DIR})
 LINK_DIRECTORIES(${RAPID_JSON_LINK_DIR})
-find_package(NFD REQUIRED)
-INCLUDE_DIRECTORIES(${NFD_INCLUDE_DIR})
-LINK_DIRECTORIES(${NFD_LIBRARY})
+
+if (STEAMWORKS_ENABLED)
+  find_package(NFD REQUIRED)
+  INCLUDE_DIRECTORIES(${NFD_INCLUDE_DIR})
+  LINK_DIRECTORIES(${NFD_LIBRARY})
+ENDIF (STEAMWORKS_ENABLED)
+
 INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2NET_INCLUDE_DIR} ${SDL2_NET_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIR}  ${SDL2_TTF_INCLUDE_DIRS} ${PHYSFS_INCLUDE_DIR})
 LINK_DIRECTORIES(${SDL2_LINK_DIRS} ${SDL2_LINK_DIR} ${SDL2IMAGE_LINK_DIRS} ${SDL2_IMAGE_LINK_DIR} ${SDL2NET_LINK_DIR} ${SDL2_NET_LINK_DIRS} ${SDL2TTF_LINK_DIR}  ${SDL2_TTF_LINK_DIRS} ${PHYSFS_LINK_DIR})
 
@@ -444,6 +448,7 @@ if (GAME_ENABLED)
 	target_link_libraries(barony ${SDL2_LIBRARIES} ${SDL2_LIBRARY} ${SDL2IMAGE_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_NET_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2TTF_LIBRARY})
 	if (STEAMWORKS_ENABLED)
 		target_link_libraries(barony ${STEAMWORKS_LIBRARY})
+		target_link_libraries(barony ${NFD_LIBRARY})
 	endif()
 	if (EOS_ENABLED)
 		target_link_libraries(barony ${EOS_LIBRARIES})
@@ -485,7 +490,6 @@ if (GAME_ENABLED)
     target_link_libraries(barony ${FMOD_LIBRARY})
   endif()
   target_link_libraries(barony ${PHYSFS_LIBRARY})
-  target_link_libraries(barony ${NFD_LIBRARY})
   if(NOT APPLE)
 	#Remember, Mac isn't using find_package for PNG.
 	target_link_libraries(barony ${PNG_LIBRARY})
