WIP linux playfab support

--- a/.github/workflows/build-linux_fmod_steam.yml
+++ b/.github/workflows/build-linux_fmod_steam.yml
@@ -28,7 +28,7 @@ jobs:
 
     # Actually does the build...
     - name: Install Ubuntu package dependencies
-      run: sudo apt-get install libsdl2-dev libsdl2-image-dev libsdl2-net-dev libsdl2-ttf-dev libpng-dev libz-dev libphysfs-dev rapidjson-dev
+      run: sudo apt-get install libsdl2-dev libsdl2-image-dev libsdl2-net-dev libsdl2-ttf-dev libpng-dev libz-dev libphysfs-dev rapidjson-dev libcurl4-openssl-dev libjsoncpp-dev
 
     # Actually does the build...
     - name: Compile
