--- a/src/Config.hpp.in
+++ b/src/Config.hpp.in
@@ -33,6 +33,11 @@
 		#define BUILD_ENV_CS "@BUILD_ENV_CS@"
 		#define BUILD_ENV_GSE "@BUILD_ENV_GSE@"
 	#endif
+	#if @PLAYFAB_ENABLED@
+	    #define USE_PLAYFAB
+	    #define BUILD_ENV_PFTID "@BUILD_ENV_PFTID@"
+	    #define BUILD_ENV_PFHID "@BUILD_ENV_PFHID@"
+	#endif
 #endif
 
 #if @IMGUI@
