--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,10 @@ if (DEFINED ENV{EOS_ENABLED})
 	set (EOS_ENABLED $ENV{EOS_ENABLED})
 endif()
 
+if (DEFINED ENV{PLAYFAB_ENABLED})
+    set (PLAYFAB_ENABLED $ENV{PLAYFAB_ENABLED})
+endif()
+
 if (NOT DEFINED EOS_ENABLED)
 	set (EOS_ENABLED 0)
 	option(EOS "Enable Epic Online Services" OFF)
@@ -41,7 +45,17 @@ if (NOT DEFINED EOS_ENABLED)
 	set(BUILD_ENV_GSE "" CACHE STRING "EOS gse")
 endif()
 
-# EOS Tokens
+if (NOT DEFINED PLAYFAB_ENABLED)
+    set (PLAYFAB_ENABLED 0)
+    option(PLAYFAB "Enable PlayFab support" OFF)
+    if (PLAYFAB)
+        set (PLAYFAB_ENABLED 1)
+    endif()
+    set(BUILD_ENV_PFTID "" CACHE STRING "PlayFab TID")
+    set(BUILD_ENV_PFHID "" CACHE STRING "PlayFab HID")
+endif()
+
+# EOS & PlayFab Tokens
 
 if (DEFINED ENV{BUILD_ENV_PR} AND NOT DEFINED BUILD_ENV_PR) # TODO: We should make all environment variable checks in this file not overwrite whatever was explicitly passed in on the command line...
 	set (BUILD_ENV_PR $ENV{BUILD_ENV_PR})
@@ -83,6 +97,20 @@ if (DEFINED ENV{BUILD_ENV_GSE} AND NOT DEFINED BUILD_ENV_GSE)
 endif()
 if (EOS_ENABLED AND "${BUILD_ENV_GSE}" STREQUAL "")
 	message(FATAL_ERROR "BUILD_ENV_GSE must be specified if EOS is enabled.")
+endif()
+
+if (DEFINED ENV{BUILD_ENV_PFTID} AND NOT DEFINED BUILD_ENV_PFTID)
+	set (BUILD_ENV_PFTID $ENV{BUILD_ENV_PFTID})
+endif()
+if (PLAYFAB_ENABLED AND "${BUILD_ENV_PFTID}" STREQUAL "")
+	message(FATAL_ERROR "BUILD_ENV_PFTID must be specified if PlayFab is enabled.")
+endif()
+
+if (DEFINED ENV{BUILD_ENV_PFHID} AND NOT DEFINED BUILD_ENV_PFHID)
+	set (BUILD_ENV_PFHID $ENV{BUILD_ENV_PFHID})
+endif()
+if (PLAYFAB_ENABLED AND "${BUILD_ENV_PFHID}" STREQUAL "")
+	message(FATAL_ERROR "BUILD_ENV_PFHID must be specified if PlayFab is enabled.")
 endif()
 
 if (DEFINED ENV{EDITOR_ENABLED})
@@ -133,23 +161,21 @@ endif()
 option(DATA_DIR "Points to install data directory" FALSE)
 
 if (STEAMWORKS_ENABLED)
-	message("------------------------")
 	message("Building with steamworks")
-	message("------------------------")
 else()
-	message("------------------------")
 	message("Building without steamworks")
-	message("------------------------")
 endif()
 
 if (EOS_ENABLED)
-	message("------------------------")
 	message("Building with EOS")
-	message("------------------------")
 else()
-	message("------------------------")
 	message("Building without EOS")
-	message("------------------------")
+endif()
+
+if (PLAYFAB_ENABLED)
+	message("Building with PlayFab")
+else()
+	message("Building without PlayFab")
 endif()
 
 # OS/Platform Flags
@@ -243,6 +269,7 @@ endif()
 set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS}")
 set ( CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS}")
 
+cmake_policy(SET CMP0072 NEW) # use new opengl libs on linux
 
 IF (APPLE)
   #include_directories(/usr/X11R6/include/)
@@ -276,7 +303,8 @@ ENDIF (APPLE)
 find_package(PhysFS REQUIRED)
 find_package(RapidJson REQUIRED)
 INCLUDE_DIRECTORIES(${RAPID_JSON_INCLUDE_DIR})
-LINK_DIRECTORIES(${RAPID_JSON_LINK_DIR})
+find_package(JsonCPP REQUIRED)
+INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIR})
 
 if (STEAMWORKS_ENABLED)
   find_package(NFD REQUIRED)
@@ -332,20 +360,18 @@ endif()
 
 if(STEAMWORKS_ENABLED)
   find_package(STEAMWORKS REQUIRED)
-  #find_package(STEAMWORKS_CWRAPPER REQUIRED)
-endif()
-if (STEAMWORKS_ENABLED)
-  #include_directories(${STEAMWORKS_CWRAPPER_INCLUDE_DIR})
   include_directories(${STEAMWORKS_INCLUDE_DIR})
 endif()
 
 if(EOS_ENABLED)
   find_package(EOS REQUIRED)
-endif()
-if (EOS_ENABLED)
   include_directories(${EOS_INCLUDE_DIR})
 endif()
 
+if (PLAYFAB_ENABLED)
+  find_package(PLAYFAB REQUIRED)
+  include_directories(${PLAYFAB_INCLUDE_DIR})
+endif()
 
 # Add include directories
 #include_directories(${GLM_INCLUDE_DIR})
@@ -453,6 +479,9 @@ if (GAME_ENABLED)
 	if (EOS_ENABLED)
 		target_link_libraries(barony ${EOS_LIBRARIES})
 	endif()
+	if (PLAYFAB_ENABLED)
+	    target_link_libraries(barony ${PLAYFAB_LIBRARIES})
+	endif()
   else(WIN32)
 	if( ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8") AND (NOT APPLE) )
 	  # 64 bit
@@ -465,6 +494,9 @@ if (GAME_ENABLED)
 	endif()
 	if (EOS_ENABLED)
 	  target_link_libraries(barony ${EOS_LIBRARIES})
+	endif()
+	if (PLAYFAB_ENABLED)
+	  target_link_libraries(barony ${PLAYFAB_LIBRARIES})
 	endif()
 	if (APPLE)
 	  target_link_libraries(barony ${PROJECT_SOURCE_DIR}/libpng16.16.dylib) #Wait...what? if(APPLE) in if(WIN32)? What was I thinking back then, haha.
@@ -490,6 +522,10 @@ if (GAME_ENABLED)
     target_link_libraries(barony ${FMOD_LIBRARY})
   endif()
   target_link_libraries(barony ${PHYSFS_LIBRARY})
+  if (PLAYFAB_ENABLED)
+    target_link_libraries(barony ${JSONCPP_LIBRARY})
+    target_link_libraries(barony ${PLAYFAB_LIBRARY})
+  endif()
   if(NOT APPLE)
 	#Remember, Mac isn't using find_package for PNG.
 	target_link_libraries(barony ${PNG_LIBRARY})
@@ -592,6 +628,10 @@ if (EDITOR_ENABLED)
 	#Remember, Mac isn't using find_package for FMOD and PNG.
 	target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
 	target_link_libraries(${EDITOR_EXE_NAME} ${PNG_LIBRARY})
+    if (PLAYFAB_ENABLED)
+      target_link_libraries(barony ${JSONCPP_LIBRARY})
+      target_link_libraries(barony ${PLAYFAB_LIBRARY})
+    endif()
   endif()
   if (APPLE)
 	target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
@@ -599,6 +639,10 @@ if (EDITOR_ENABLED)
 	if (EOS_ENABLED)
 	  target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY})
 	endif()
+    if (PLAYFAB_ENABLED)
+      target_link_libraries(barony ${JSONCPP_LIBRARY})
+      target_link_libraries(barony ${PLAYFAB_LIBRARY})
+    endif()
   endif()
   if(WIN32)
 	target_link_libraries(${EDITOR_EXE_NAME} wsock32 ws2_32)
