fix linux compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,10 +27,6 @@ if (DEFINED ENV{EOS_ENABLED})
 	set (EOS_ENABLED $ENV{EOS_ENABLED})
 endif()
 
-if (DEFINED ENV{PLAYFAB_ENABLED})
-    set (PLAYFAB_ENABLED $ENV{PLAYFAB_ENABLED})
-endif()
-
 if (NOT DEFINED EOS_ENABLED)
 	set (EOS_ENABLED 0)
 	option(EOS "Enable Epic Online Services" OFF)
@@ -45,6 +41,10 @@ if (NOT DEFINED EOS_ENABLED)
 	set(BUILD_ENV_GSE "" CACHE STRING "EOS gse")
 endif()
 
+if (DEFINED ENV{PLAYFAB_ENABLED})
+    set (PLAYFAB_ENABLED $ENV{PLAYFAB_ENABLED})
+endif()
+
 if (NOT DEFINED PLAYFAB_ENABLED)
     set (PLAYFAB_ENABLED 0)
     option(PLAYFAB "Enable PlayFab support" OFF)
@@ -53,6 +53,22 @@ if (NOT DEFINED PLAYFAB_ENABLED)
     endif()
     set(BUILD_ENV_PFTID "" CACHE STRING "PlayFab TID")
     set(BUILD_ENV_PFHID "" CACHE STRING "PlayFab HID")
+endif()
+
+if (DEFINED ENV{CURL_ENABLED})
+    set (CURL_ENABLED $ENV{CURL_ENABLED})
+endif()
+
+if (NOT DEFINED CURL_ENABLED)
+    set (CURL_ENABLED 0)
+    option(CURL "Enable CURL support" OFF)
+    if (CURL)
+        set (CURL_ENABLED 1)
+    endif()
+endif()
+
+if (PLAYFAB_ENABLED AND NOT CURL_ENABLED)
+	message(FATAL_ERROR "CURL must be enabled if PlayFab is enabled.")
 endif()
 
 # EOS & PlayFab Tokens
@@ -176,6 +192,12 @@ if (PLAYFAB_ENABLED)
 	message("Building with PlayFab")
 else()
 	message("Building without PlayFab")
+endif()
+
+if (CURL_ENABLED)
+	message("Building with CURL")
+else()
+	message("Building without CURL")
 endif()
 
 # OS/Platform Flags
@@ -303,8 +325,6 @@ ENDIF (APPLE)
 find_package(PhysFS REQUIRED)
 find_package(RapidJson REQUIRED)
 INCLUDE_DIRECTORIES(${RAPID_JSON_INCLUDE_DIR})
-find_package(JsonCPP REQUIRED)
-INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIR})
 
 if (STEAMWORKS_ENABLED)
   find_package(NFD REQUIRED)
@@ -371,6 +391,19 @@ endif()
 if (PLAYFAB_ENABLED)
   find_package(PLAYFAB REQUIRED)
   include_directories(${PLAYFAB_INCLUDE_DIR})
+  link_directories(${PLAYFAB_LIBRARY})
+  find_package(JsonCPP REQUIRED)
+  INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIR})
+  LINK_DIRECTORIES(${JSONCPP_LIBRARY})
+endif()
+
+if (CURL_ENABLED)
+  find_package(OpenSSL REQUIRED)
+  include_directories(${OPENSSL_INCLUDE_DIR})
+  link_directories(${OPENSSL_LIBRARY})
+  find_package(CURL REQUIRED)
+  include_directories(${CURL_INCLUDE_DIR})
+  link_directories(${CURL_LIBRARIES})
 endif()
 
 # Add include directories
@@ -480,9 +513,26 @@ if (GAME_ENABLED)
 		target_link_libraries(barony ${EOS_LIBRARIES})
 	endif()
 	if (PLAYFAB_ENABLED)
-	    target_link_libraries(barony ${PLAYFAB_LIBRARIES})
+	    target_link_libraries(barony ${PLAYFAB_LIBRARY})
+	    target_link_libraries(barony ${JSONCPP_LIBRARY})
+	endif()
+	if (CURL_ENABLED)
+	  target_link_libraries(barony ${CURL_LIBRARIES} ${OPENSSL_LIBRARIES})
+	  #target_link_libraries(barony OpenSSL::applink)
+	  #target_link_libraries(barony OpenSSL::SSL)
+	  #target_link_libraries(barony OpenSSL::Crypto)
 	endif()
   else(WIN32)
+	if (CURL_ENABLED)
+	  target_link_libraries(barony ${CURL_LIBRARIES} ${OPENSSL_LIBRARIES})
+	  #target_link_libraries(barony OpenSSL::applink)
+	  #target_link_libraries(barony OpenSSL::SSL)
+	  #target_link_libraries(barony OpenSSL::Crypto)
+	endif()
+	if (PLAYFAB_ENABLED)
+	  target_link_libraries(barony ${PLAYFAB_LIBRARY})
+	  target_link_libraries(barony ${JSONCPP_LIBRARY})
+	endif()
 	if( ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8") AND (NOT APPLE) )
 	  # 64 bit
 	  target_link_libraries(barony -L/usr/lib64 -lstdc++)
@@ -490,13 +540,10 @@ if (GAME_ENABLED)
 	target_link_libraries(barony ${SDL2_LIBRARIES} ${SDL2_LIBRARY} ${SDL2IMAGE_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_NET_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2TTF_LIBRARY})
 	if (STEAMWORKS_ENABLED)
 	  target_link_libraries(barony ${STEAMWORKS_LIBRARY})
-	  #target_link_libraries(barony ${STEAMWORKS_CWRAPPER_LIBRARIES} -lstdc++)
+	  target_link_libraries(barony ${NFD_LIBRARY})
 	endif()
 	if (EOS_ENABLED)
 	  target_link_libraries(barony ${EOS_LIBRARIES})
-	endif()
-	if (PLAYFAB_ENABLED)
-	  target_link_libraries(barony ${PLAYFAB_LIBRARIES})
 	endif()
 	if (APPLE)
 	  target_link_libraries(barony ${PROJECT_SOURCE_DIR}/libpng16.16.dylib) #Wait...what? if(APPLE) in if(WIN32)? What was I thinking back then, haha.
@@ -522,10 +569,6 @@ if (GAME_ENABLED)
     target_link_libraries(barony ${FMOD_LIBRARY})
   endif()
   target_link_libraries(barony ${PHYSFS_LIBRARY})
-  if (PLAYFAB_ENABLED)
-    target_link_libraries(barony ${JSONCPP_LIBRARY})
-    target_link_libraries(barony ${PLAYFAB_LIBRARY})
-  endif()
   if(NOT APPLE)
 	#Remember, Mac isn't using find_package for PNG.
 	target_link_libraries(barony ${PNG_LIBRARY})
@@ -597,9 +640,16 @@ if (EDITOR_ENABLED)
   endif()
   target_compile_definitions(${EDITOR_EXE_NAME} PUBLIC EDITOR) # So that shared source files know this is the editor they're dealing with. # TODO: Try using this to disable some things we don't want in the editor?
 
+  if (CURL_ENABLED)
+	target_link_libraries(${EDITOR_EXE_NAME} ${CURL_LIBRARIES} ${OPENSSL_LIBRARIES})
+	#target_link_libraries(${EDITOR_EXE_NAME} OpenSSL::applink)
+	#target_link_libraries(${EDITOR_EXE_NAME} OpenSSL::SSL)
+	#target_link_libraries(${EDITOR_EXE_NAME} OpenSSL::Crypto)
+  endif()
   target_link_libraries(${EDITOR_EXE_NAME} ${SDL2_LIBRARIES} ${SDL2_LIBRARY} ${SDL2IMAGE_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_NET_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2TTF_LIBRARY})
   if(STEAMWORKS_ENABLED)
 	target_link_libraries(${EDITOR_EXE_NAME} ${STEAMWORKS_LIBRARY})
+    target_link_libraries(${EDITOR_EXE_NAME} ${NFD_LIBRARY})
   endif()
   if(WIN32)
 	if (EOS_ENABLED)
@@ -628,10 +678,6 @@ if (EDITOR_ENABLED)
 	#Remember, Mac isn't using find_package for FMOD and PNG.
 	target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
 	target_link_libraries(${EDITOR_EXE_NAME} ${PNG_LIBRARY})
-    if (PLAYFAB_ENABLED)
-      target_link_libraries(barony ${JSONCPP_LIBRARY})
-      target_link_libraries(barony ${PLAYFAB_LIBRARY})
-    endif()
   endif()
   if (APPLE)
 	target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
@@ -639,10 +685,6 @@ if (EDITOR_ENABLED)
 	if (EOS_ENABLED)
 	  target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY})
 	endif()
-    if (PLAYFAB_ENABLED)
-      target_link_libraries(barony ${JSONCPP_LIBRARY})
-      target_link_libraries(barony ${PLAYFAB_LIBRARY})
-    endif()
   endif()
   if(WIN32)
 	target_link_libraries(${EDITOR_EXE_NAME} wsock32 ws2_32)
