add theoraplayer support to linux, bump ci deps
Signed-off-by: SheridanR <sheridan.rathbun@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,18 @@ if (NOT DEFINED PLAYFAB_ENABLED)
     set(BUILD_ENV_PFHID "" CACHE STRING "PlayFab HID")
 endif()
 
+if (DEFINED ENV{THEORAPLAYER_ENABLED})
+    set (THEORAPLAYER_ENABLED $ENV{THEORAPLAYER_ENABLED})
+endif()
+
+if (NOT DEFINED THEORAPLAYER_ENABLED)
+    set (THEORAPLAYER_ENABLED 0)
+    option(THEORAPLAYER "Enable TheoraPlayer for video playback" OFF)
+    if (THEORAPLAYER)
+        set (THEORAPLAYER_ENABLED 1)
+    endif()
+endif()
+
 if (DEFINED ENV{CURL_ENABLED})
     set (CURL_ENABLED $ENV{CURL_ENABLED})
 endif()
@@ -192,6 +204,12 @@ if (PLAYFAB_ENABLED)
 	message("Building with PlayFab")
 else()
 	message("Building without PlayFab")
+endif()
+
+if (THEORAPLAYER_ENABLED)
+    message("Building with TheoraPlayer")
+else()
+    message("Building without TheoraPlayer")
 endif()
 
 if (CURL_ENABLED)
@@ -397,6 +415,15 @@ if (PLAYFAB_ENABLED)
   LINK_DIRECTORIES(${JSONCPP_LIBRARY})
 endif()
 
+if (THEORAPLAYER_ENABLED)
+  find_package(TheoraPlayer REQUIRED)
+  include_directories(${THEORAPLAYER_INCLUDE_DIR})
+  link_directories(${THEORAPLAYER_LIBRARIES})
+  find_package(OGGVORBIS REQUIRED)
+  include_directories(${OGG_INCLUDE_DIR} ${VORBIS_INCLUDE_DIR})
+  link_directories(${OGGVORBIS_LIBRARIES})
+endif()
+
 if (CURL_ENABLED)
   find_package(OpenSSL REQUIRED)
   include_directories(${OPENSSL_INCLUDE_DIR})
@@ -516,6 +543,9 @@ if (GAME_ENABLED)
 	    target_link_libraries(barony ${PLAYFAB_LIBRARY})
 	    target_link_libraries(barony ${JSONCPP_LIBRARY})
 	endif()
+	if (THEORAPLAYER_ENABLED)
+	    target_link_libraries(barony ${THEORAPLAYER_LIBRARIES} ${OGGVORBIS_LIBRARIES})
+	endif()
 	if (CURL_ENABLED)
 	  target_link_libraries(barony ${CURL_LIBRARIES} ${OPENSSL_LIBRARIES})
 	  #target_link_libraries(barony OpenSSL::applink)
@@ -528,6 +558,9 @@ if (GAME_ENABLED)
 	  #target_link_libraries(barony OpenSSL::applink)
 	  #target_link_libraries(barony OpenSSL::SSL)
 	  #target_link_libraries(barony OpenSSL::Crypto)
+	endif()
+	if (THEORAPLAYER_ENABLED)
+	    target_link_libraries(barony ${THEORAPLAYER_LIBRARIES} ${OGGVORBIS_LIBRARIES})
 	endif()
 	if (PLAYFAB_ENABLED)
 	  target_link_libraries(barony ${PLAYFAB_LIBRARY})
@@ -640,6 +673,9 @@ if (EDITOR_ENABLED)
   endif()
   target_compile_definitions(${EDITOR_EXE_NAME} PUBLIC EDITOR) # So that shared source files know this is the editor they're dealing with. # TODO: Try using this to disable some things we don't want in the editor?
 
+  if (THEORAPLAYER_ENABLED)
+    target_link_libraries(${EDITOR_EXE_NAME} ${THEORAPLAYER_LIBRARIES} ${OGGVORBIS_LIBRARIES})
+  endif()
   if (CURL_ENABLED)
 	target_link_libraries(${EDITOR_EXE_NAME} ${CURL_LIBRARIES} ${OPENSSL_LIBRARIES})
 	#target_link_libraries(${EDITOR_EXE_NAME} OpenSSL::applink)
