--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,9 @@ xcode/Barony/Barony.xcodeproj/project.xcworkspace/*
 xcode/Barony/Barony.xcodeproj/xcuserdata/*
 *.ps1
 !LICENSE.nativefiledialog.txt
+CMakeCache.txt
+CMakeFiles/*
+Makefile
+cmake_install.cmake
+CMakeDirectoryInformation.cmake
+progress.marks
